<resources>
    <string name="app_name">YoungChemist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="enter">Войти</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="register">Зарегестрироваться</string>
    <string name="register_familyName">Фамилия</string>
    <string name="repeted_password_hint">Повторите пароль</string>
    <string name="error_input_empty">Поле не должно быть пустым</string>
    <string name="error_not_a_valid_email">Введите верную почту</string>
    <string name="error_password_too_short">Пароль должен быть не менее %d символов</string>
    <string name="error_surname_too_short">Фамилия должна быть не менее %d символов</string>
    <string name="error_name_too_short">Имя должно быть не менее %d символов</string>
    <string name="greeting">Мы скучали! Хорошо, что ты вернулся</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="what_is_inside">Что внутри?</string>
    <string name="havent_register_yet">Еще не зарегестрировался?</string>
    <string name="register_here">Регистрируйся тут</string>
    <string name="family_name_hint">Фамилия</string>
    <string name="repeated_password_hint">Повторите пароль</string>
    <string name="already_have_an_account">Уже есть аккаунт?</string>
    <string name="enter_email">Введите вашу почту</string>
    <string name="restoring_password">Восстановление пароля</string>
    <string name="return_to_login_screen">Вернуться на экран входа</string>
    <string name="investigate">Начнем изучать химию вместе!</string>
    <string name="description">Читайте лекции, проходите тесты и совершенствуйте свои знания</string>
    <string name="password_must_be_equals">Пароли должны совпадать</string>
    <string name="go_to_your_email_for_password_changing">Перейдите на свою почту для смены пароля</string>
    <string name="page_number_from_all_pages">%1s вопрос из %1s</string>
    <string name="page_lecture_number_from_all_pages">%1s/%1s</string>
    <string name="hello_user_name">Привет, %1s!</string>

    <!-- Firebase Auth Exceptions localized -->
    <string name="ERROR_EMAIL_ALREADY_IN_USE">К сожалению, этот логин уже занят. Попробуйте зарегестрироваться с другим логином</string>
    <string name="ERROR_USER_NOT_FOUND">Такого пользователя не существует! Проверьте введенные данные. </string>
    <string name="ERROR_UNKNOWN">Произошла ошибка, попробуйте повторить это действие позже</string>
    <string name="ERROR_INVALID_CREDENTIALS">Проверьте правильность ввода</string>
    <string name="select_page">Выбрать страницу</string>
    <string name="start_test">Начать тест</string>
    <string name="done">Готово</string>
    <string name="return_to_main_page">Вернуться на главную</string>
    <string name="back_to_lectures">Вернуться к лекциям</string>

    <!--User test result strings -->
    <string name="very_bad">Надо стараться лучше..</string>
    <string name="bad">В следующий раз надо сдать лучше!</string>
    <string name="not_so_bad">Неплохо!</string>
    <string name="good">Почти превосходно!</string>
    <string name="very_good">Вау! Идеальный результат!</string>
    <string name="time_is_up">Время истекло</string>
    <string name="test_mark">Оценка за тест:</string>
    <string name="Key">Ключ</string>
    <string name="name">Имя</string>
    <string name="change_password">Сменить пароль</string>
    <string name="change_email">Сменить почту</string>
    <string name="enter_old_password">Введите старый пароль</string>
    <string name="next">Дальше</string>
    <string name="enter_new_password">Введите новый пароль</string>
    <string name="change">Сменить</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_new_email">Введите новую почту</string>
    <string name="email_changing">Смена почты</string>
    <string name="password_has_successfully_changed">Пароль успешно изменен</string>
    <string name="email_has_successfully_changed">Логин успешно изменен</string>
    <string name="exit">Выйти</string>
    <string name="subject_search">Поиск по предметам</string>
    <string name="no_new_lectures">Новых лекций нет</string>
    <string name="new_lectures_number">Количество новых лекций - %d</string>
    <string name="no_new_subjects">Новых предметов нет</string>
    <string name="new_subjects_number">Количество новых предметов - %d</string>
    <string name="error_while_loading">Не удалось обновить</string>
</resources>