<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.youngchemist.ui.screen.auth.password_restore.RestorePasswordFragmentViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screen.auth.password_restore.RestorePasswordFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:background="@drawable/main_background">

            <TextView
                android:id="@+id/tv_restore_password"
                style="@style/TittleTextStyle"
                app:layout_constraintVertical_bias="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restoring_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_enter_email"
                style="@style/SubTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_email"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_restore_password"
                app:layout_constraintVertical_bias="0.01">

            </TextView>

            <TextView
                android:id="@+id/tv_login_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="2dp"
                android:textColor="#F44336"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/login_container"
                app:layout_constraintStart_toStartOf="parent">

            </TextView>

            <LinearLayout
                android:id="@+id/login_container"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_rounded_rectangle_for_edittext"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_restore_password"
                app:layout_constraintVertical_bias="0.1">

                <EditText
                    android:id="@+id/et_login"
                    android:onTextChanged="@{viewModel.onLoginTextChanged}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/login_hint">

                </EditText>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bn_restore_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_rounded_button"
                android:text="@string/restore_password"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_container"
                app:layout_constraintVertical_bias="0.08" />

            <TextView
                android:id="@+id/tv_return_to_login_screen"
                style="@style/SubTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2196F3"
                android:onClick="@{view -> viewModel.exit()}"
                android:text="@string/return_to_login_screen"
                app:layout_constraintVertical_bias="0.1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bn_restore_password">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>