<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.youngchemist.ui.screen.auth.login.LoginFragmnetViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screen.auth.login.LoginFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/main_background"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/tv_welcome"
                style="@style/TittleTextStyle"
                app:layout_constraintVertical_bias="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView9"
                style="@style/SubTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
                app:layout_constraintVertical_bias="0.01">

            </TextView>

            <TextView
                android:id="@+id/tv_login_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="2dp"
                android:textColor="#F44336"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/login_container"
                app:layout_constraintStart_toStartOf="parent">

            </TextView>

            <LinearLayout
                android:id="@+id/login_container"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_rounded_rectangle_for_edittext"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                app:layout_constraintVertical_bias="0.06">

                <EditText
                    android:id="@+id/et_login"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/login_hint"
                    android:onTextChanged="@{viewModel.onEmailTextChanged}"
                    android:text="@{viewModel.loginText}">

                </EditText>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_password_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="#F44336"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/password_container"
                app:layout_constraintStart_toStartOf="parent">

            </TextView>

            <LinearLayout
                android:id="@+id/password_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/test"
                app:layout_constraintVertical_bias="0.06"
                android:background="@drawable/shape_rounded_rectangle_for_edittext"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_container"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/password_hint"
                    android:onTextChanged="@{viewModel.onPasswordTextChanged}"
                    android:text="@{viewModel.passwordText}">

                </EditText>



            </LinearLayout>

            <ImageView
                android:id="@+id/iv_is_password_shown"
                android:onClick="@{view -> viewModel.togglePasswordVisibility()}"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_icon_hide_password"
                app:layout_constraintBottom_toBottomOf="@+id/password_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/password_container">

            </ImageView>

            <TextView
                android:id="@+id/tv_restore_password"
                style="@style/SubTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintVertical_bias="0.02"
                android:text="@string/restore_password"
                android:onClick="@{view -> viewModel.navigateToRestorePasswordScreen()}"
                android:textColor="#838383"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_container">

            </TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bn_enter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/shape_rounded_button"
                android:text="@string/enter"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:onClick="@{view -> viewModel.enter()}"
                app:layout_constraintVertical_bias="0.14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_restore_password" />

            <View
                android:id="@+id/left_line"
                android:layout_width="120dp"
                android:layout_height="2dp"
                android:background="@drawable/right_gradient_line"
                app:layout_constraintBottom_toBottomOf="@+id/tv_what_is_inside"
                app:layout_constraintEnd_toStartOf="@+id/tv_what_is_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_what_is_inside">

            </View>

            <View
                android:id="@+id/right_line"
                android:layout_width="120dp"
                android:layout_height="2dp"
                android:background="@drawable/left_gradient_line"
                app:layout_constraintBottom_toBottomOf="@+id/tv_what_is_inside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_what_is_inside"
                app:layout_constraintTop_toTopOf="@+id/tv_what_is_inside">

            </View>

            <TextView
                android:id="@+id/tv_what_is_inside"
                app:layout_constraintVertical_bias="0.15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_is_inside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bn_enter">

            </TextView>

            <RelativeLayout
                android:id="@+id/container_test_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_outlined_rectangle"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/container_3d_icon"
                app:layout_constraintEnd_toStartOf="@+id/container_3d_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/container_3d_icon">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_icon_test"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_3d_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_outlined_rectangle"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_what_is_inside">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_icon_3d"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/container_lecture_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_outlined_rectangle"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/container_3d_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/container_3d_icon"
                app:layout_constraintTop_toTopOf="@+id/container_3d_icon">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_icon_lecture">

                </ImageView>

            </RelativeLayout>

            <TextView
                style="@style/SubTitleTextStyle"
                android:textColor="#838383"
                android:textSize="14sp"
                android:id="@+id/tv_havent_register_yet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/havent_register_yet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_3d_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_here"
                android:textColor="#2196F3"
                android:onClick="@{view -> viewModel.navigateToRegisterScreen()}"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintBottom_toBottomOf="@+id/tv_havent_register_yet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_havent_register_yet"
                app:layout_constraintTop_toTopOf="@+id/tv_havent_register_yet"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>